fix scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
   --anim1: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.body {
+body {
   font-family: 'Roboto', 'sans-serif';
   background-color: var(--main);
   color: var(--second-text-color);
@@ -22,9 +22,59 @@
   letter-spacing: 0.03em;
 }
 
+/* Кастомный скролбар */
 html::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
+  width: 20px; /* ширина для вертикального скролла */
+  height: 8px; /* высота для горизонтального скролла */
+  background-color: transparent;
 }
+
+/* ползунок скроллбара */
+html::-webkit-scrollbar-thumb {
+  background-color: var(--dark-accent);
+  border-radius: 9em;
+  box-shadow: inset 1px 1px 10px #f3faf7;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: var(--accent);
+}
+
+/* Стрелки */
+
+html::-webkit-scrollbar-button:vertical:start:decrement {
+  background: linear-gradient(120deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(240deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(0deg, var(--accent) 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+  border-radius: 9em;
+}
+
+html::-webkit-scrollbar-button:vertical:end:increment {
+  background: linear-gradient(300deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(60deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(180deg, var(--accent) 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+  border-radius: 9em;
+}
+
+html::-webkit-scrollbar-button:horizontal:start:decrement {
+  background: linear-gradient(30deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(150deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(270deg, var(--accent) 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+  border-radius: 9em;
+}
+
+html::-webkit-scrollbar-button:horizontal:end:increment {
+  background: linear-gradient(210deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(330deg, var(--accent) 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(90deg, var(--accent) 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+  border-radius: 9em;
+}
+/*  */
 
 h1,
 h2,
@@ -47,7 +97,7 @@ address {
 }
 
 .no-scroll {
-  overflow: hidden;
+  overflow-y: hidden;
 }
 
 .section {
@@ -611,6 +661,7 @@ li.nav-link:not(:last-child) {
 .submit-btn-footer:hover,
 .submit-btn-footer:focus {
   background-color: var(--accent);
+  transform: scale(1.001);
 }
 
 .subscribe-icon-footer {
@@ -771,7 +822,7 @@ li.nav-link:not(:last-child) {
 
 .form-fild-area textarea {
   width: 100%;
-  max-height: 96px;
+  max-height: 120px;
   padding: 12px 16px;
   resize: none;
   outline: none;
